--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
 	<title>dogrun</title>
 	<style type='text/css'>
 
@@ -112,6 +111,8 @@
 			visibility: visible;
 		}
 	</style>
+<link id='-gd-engine-icon' rel='icon' type='image/png' href='dogrun.icon.png' />
+<link rel='apple-touch-icon' href='dogrun.apple-touch-icon.png'/>
 
 </head>
 <body>
@@ -137,7 +138,7 @@
 	<script type='text/javascript' src='dogrun.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"dogrun","experimentalVK":false,"fileSizes":{"dogrun.pck":2478512,"dogrun.wasm":12665632},"gdnativeLibs":[]};
+		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"dogrun","experimentalVK":false,"fileSizes":{"dogrun.pck":2521568,"dogrun.wasm":13342674},"focusCanvas":true,"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
 
 		(function() {
